name:           quotation-frontend
version:        0.1.0.0
category:       Web
author:         Zelin Feng
maintainer:     fengzlin@mail2.sysu.edu.cn
copyright:      Zelin Feng,
                2018
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

library
  hs-source-dirs: src/store
  build-depends:
      base
    , react-flux
    , text
    , lens
    , deepseq
    , aeson
  exposed-modules:
      JiaheSoft.Quotation.Store.App
    , JiaheSoft.Quotation.Store.Login
    , JiaheSoft.Quotation.Model.User
  other-modules:
      JiaheSoft.Quotation.Import
    , JiaheSoft.Quotation.Store.Import
    , JiaheSoft.Quotation.Model.Import
  if impl(ghcjs)
    hs-source-dirs: src/view
    exposed-modules:
        JiaheSoft.Quotation.View.App
      , JiaheSoft.Quotation.View.Login
      , JiaheSoft.React.MaterialUI
      , JiaheSoft.React.Common.Centered
    other-modules:
        JiaheSoft.Quotation.View.Import
      , JiaheSoft.React.Import
    build-depends: ghcjs-base
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
      DeriveAnyClass
    , DeriveGeneric
    , OverloadedStrings
    , TemplateHaskell
    , TypeFamilies

executable app
  if !impl(ghcjs)
    main-is: Dumb.hs
  if impl(ghcjs)
    main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base
    , quotation-frontend
    , react-flux
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
      DeriveAnyClass
    , DeriveGeneric
    , OverloadedStrings
    , TemplateHaskell
    , TypeFamilies

test-suite app-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  if impl(ghcjs)
    main-is: Dumb.hs
  build-depends:
      base
    , quotation-frontend
    , QuickCheck
    , hspec
  -- other-modules:
  --     StoreSpec
  default-language: Haskell2010
